# Operit

./: platform.jks  sync_example_packages.py
.github/scripts/: sync-release-to-gitee.sh
.trae/skills/amap-navigation/: SKILL.md
.trae/skills/local-music-player/: SKILL.md
.trae/skills/vehicle-audio/: SKILL.md
.workflow/: pipeline-20260303.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ai/assistance/operit/ui/theme/: Theme.kt  (+1 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-night/: themes.xml
docs/: TOOLPKG_FORMAT_GUIDE.md  mnn_toolcall_research.md
docs/package_dev/: toolpkg.md
examples/apktool/: manifest.json
examples/apktool/resources/apktool/: README.md
examples/types/: java-bridge.d.ts  results.d.ts  system.d.ts  tool-types.d.ts
examples/windows_control/: manifest.json
examples/windows_control/resources/pc_agent/: README.md
examples/windows_control/resources/pc_agent/operit-pc-agent/: .gitignore  README.md  operit_pc_agent.bat  operit_pc_agent_stop.bat  package.json
examples/windows_control/resources/pc_agent/operit-pc-agent/data/: config.example.json
examples/windows_control/resources/pc_agent/operit-pc-agent/public/: index.html
examples/windows_control/resources/pc_agent/operit-pc-agent/public/scripts/: main.js
examples/windows_control/resources/pc_agent/operit-pc-agent/public/scripts/features/: commands-page.js  processes-page.js  settings-page.js  wizard-page.js
examples/windows_control/resources/pc_agent/operit-pc-agent/public/scripts/i18n/: strings.js
examples/windows_control/resources/pc_agent/operit-pc-agent/public/scripts/services/: api.js
examples/windows_control/resources/pc_agent/operit-pc-agent/public/scripts/ui/: runtime.js  widgets.js
examples/windows_control/resources/pc_agent/operit-pc-agent/public/styles/: base.css  components.css  tokens.css
examples/windows_control/resources/pc_agent/operit-pc-agent/scripts/: launch_agent.ps1  stop_agent.ps1
examples/windows_control/resources/pc_agent/operit-pc-agent/src/: server.js
examples/windows_control/resources/pc_agent/operit-pc-agent/src/config/: constants.js  paths.js  version.js
examples/windows_control/resources/pc_agent/operit-pc-agent/src/handlers/: api-handler.js
examples/windows_control/resources/pc_agent/operit-pc-agent/src/lib/: fs-utils.js  http-utils.js  logger.js
examples/windows_control/resources/pc_agent/operit-pc-agent/src/services/: file-service.js  process-service.js
examples/windows_control/resources/pc_agent/operit-pc-agent/src/stores/: config-store.js  runtime-store.js  startup-state-store.js
mnn/: CMakeLists.txt
mnn/src/main/cpp/: mnnllmnative.cpp
mnn/src/main/java/com/ai/assistance/mnn/: MNNLlmContextInfo.kt  MNNLlmNative.kt  MNNLlmSession.kt
quickjs/src/main/cpp/: quickjs_jni.cpp
(+36 files in other folders)
